# dockerized-rust-app-template

./: Cargo.toml  Dockerfile  Makefile.toml  README.md  cargo-generate.toml
